[project]
name = "zha-exporter"
version = "0.1.0"
description = "Zigbee for Home Assistant Prometheus Exporter"
readme = "README.md"
authors = [
    { name = "Allan Eising", email = "allan@eising.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "click>=8.1.8",
    "prometheus-aioexporter>=3.0.1",
    "prometheus-client>=0.21.1",
    "pydantic>=2.10.6",
    "websockets>=14.2",
]


[project.scripts]
zha-exporter = "zha_exporter.exporter:script"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src"]
reportAny = false
reportExplicitAny = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
